# corrosion

./: .gitignore  CMakeLists.txt  README.md  flake.nix
builder/: Cargo.toml
builder/src/: main.rs
cmake/: Corrosion.cmake  CorrosionConfig.cmake.in  CorrosionGenerator.cmake  FindRust.cmake
test/: CMakeLists.txt
test/config/: CMakeLists.txt
test/config/ExternalCorrosionBuilder/: CMakeLists.txt  Test.cmake
test/config/ExternalCorrosionGenerator/: CMakeLists.txt
test/config/FindRust/: CMakeLists.txt
